[workspace]
resolver = "2"
members = ["cli", "lib"]

[workspace.package]
version = "4.0.2"
edition = "2021"
license = "Apache-2.0"
homepage = "https://steel.new"
documentation = "https://docs.rs/steel/latest/steel/"
repository = "https://github.com/regolith-labs/steel"
readme = "./README.md"
keywords = ["solana"]

[workspace.dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
clap = { features = ["derive", "env"], version = "4.4" }
clap_v3 = { version = "3", package = "clap" }
anyhow = "1"
colored = "2.0"
git2 = "0.16"
fixed = "=1.28"
half = "=2.4.1"
indicatif = "0.17"
num_enum = "0.7"
prettyplease = "0.2"
syn = { features = ["full"], version = "2.0" }
solana-clap-v3-utils = "^2.1"
solana-cli-config = "^2.1"
solana-program = "^2.1"
solana-sdk = "^2.1"
solana-signer = "^2.2"
solana-keypair = "^2.2"
solana-transaction = "^2.2"
solana-commitment-config = "^2.2"
spl-token = { features = ["no-entrypoint"], version = "^4" }
spl-token-2022 = { features = ["no-entrypoint"], version = "^7" }
spl-associated-token-account = { features = [ "no-entrypoint" ], version = "6.0" }
thiserror = "1.0.57"
tokio = "1.35"
quote = "1.0"
toml = "0.8.19"
serde_json = "1.0.137"