[package]
name = "steel-cli"
description = "A command line interface for building Solana programs."
readme.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[[bin]]
name = "steel"
path = "src/main.rs"

[features]
default = []
admin = []

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_v3.workspace = true
colored.workspace = true
indicatif.workspace = true 
git2.workspace = true
prettyplease.workspace = true
syn.workspace = true
tokio.workspace = true
quote.workspace = true
solana-sdk.workspace = true
solana-cli-config.workspace = true
solana-clap-v3-utils.workspace = true
toml.workspace = true
serde_json.workspace = true
