[package]
name = "steel"
description = "Solana smart contract framework"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
default = []
spl = ["spl-token", "spl-associated-token-account"]
nostd = ["solana-nostd-entrypoint", "arrayvec"]

[dependencies]
bytemuck.workspace = true
num_enum.workspace = true
solana-program.workspace = true
spl-token = { workspace = true, optional = true }
spl-associated-token-account = { workspace = true, optional = true }
thiserror.workspace = true
solana-nostd-entrypoint = { workspace = true, optional = true }
arrayvec = { workspace = true, optional = true }