[package]
name = "steel"
description = "Solana smart contract framework"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
default = []
spl = ["spl-token", "spl-associated-token-account"]
pinocchio = ["dep:pinocchio", "dep:pinocchio-log"]

[dependencies]
bytemuck.workspace = true
num_enum.workspace = true
solana-program.workspace = true
spl-token = { workspace = true, optional = true }
spl-associated-token-account = { workspace = true, optional = true }
thiserror.workspace = true
pinocchio = { workspace = true, optional = true }
pinocchio-log = { workspace = true, optional = true }
