[package]
name = "steel"
description = "Solana smart contract framework"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
default = ["spl"]
spl = ["spl-token", "spl-token-2022", "spl-associated-token-account"]

[dependencies]
bytemuck.workspace = true
num_enum.workspace = true
solana-program.workspace = true
spl-token = { workspace = true, optional = true }
spl-token-2022 = { workspace = true, optional = true }
spl-associated-token-account = { workspace = true, optional = true }
thiserror.workspace = true

