[package]
name = "steel-rpc-client"
description = "Solana RPC client with helpers for Steel programs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
deafult = []

[dependencies]
anyhow.workspace = true
solana-client.workspace = true
steel.workspace = true
solana-sdk.workspace = true