[package]
name = "steel-sdk"
description = "Client SDK for Solana with helpers for Steel programs"
version = "0.3.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
deafult = []
wasm = ["solana-client-wasm"]

[dependencies]
anyhow.workspace = true
solana-client.workspace = true
solana-client-wasm = { workspace = true, optional = true }
steel.workspace = true
solana-sdk.workspace = true
