[workspace]
resolver = "2"
members = ["api", "program"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://ore.supply"
documentation = "https://ore.supply"
repository = "https://github.com/regolith-labs/steel"
keywords = ["solana"]

[workspace.dependencies]
bytemuck = "1.14.3"
num_enum = "0.7.2"
example-0-api = { path = "./api" }
solana-program = "2.0.7"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "5.0.2", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "4.0.0", features = [ "no-entrypoint" ] } 
steel = { path = "../../lib" }
