[workspace]
resolver = "2"
members = ["api", "program"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://ore.supply"
documentation = "https://ore.supply"
repository = "https://github.com/regolith-labs/steel"
keywords = ["solana"]

[workspace.dependencies]
bytemuck = "1.14.3"
num_enum = "0.7.2"
example-1-api = { path = "./api" }
solana-program = "^1.18"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.3", features = [ "no-entrypoint" ] } 
steel = { path = "../../lib", features = ["nostd"] }
