[package]
name = "example-0-program"
description = "Example program 0"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []

[dependencies]
example-0-api.workspace = true
solana-program.workspace = true
steel.workspace = true

